environments/production/patches/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plan-api
spec:
  template:
    spec:
      containers:
        - name: api
          # sha-4ab1edb
          image: ghcr.io/simonbrundin/plan-api:sha-be72fcf
