environments/production/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plan-app
spec:
  template:
    spec:
      containers:
        - name: plan-app
          # Updated by .github/workflows/commit.nuxt.yaml.
          image: >-
            ghcr.io/simonbrundin/plan@sha256:9fc3a221cbea0e7ed8ddae74c92f8c49260d36c6034eab6b1efa244603e48dcb
