environments/production/patches/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plan-route
  namespace: plan
spec:
  hostnames:
    - "plan.simonbrundin.com"
